--- a/style.css
+++ b/style.css
@@ -22,5 +22,22 @@ margin-left: 30%;
 }
 *{
     margin: 0;
-    padding: 0;
+}
+.footer{
+    font-size: 20px;
+    text-align: center;
+    color:white;
+    margin-top: 279%;
+    background-color: black;
+}
+.icons-foot{
+display: inline-block;
+height: 100%;
+}
+.text-left{
+    text-align: left;
+}
+.github{
+    padding-top: 10px;
+    margin-left: 10%;
 }
